--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_food_detail.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_food_detail.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Food_Detail">
+    tools:context=".ui.Food_Detail.Food_Detail">
 
     <TextView
         android:id="@+id/textScan"
