--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_main.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_main.xml
@@ -5,23 +5,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.main.MainActivity">
+
+
+<!--    <FrameLayout-->
+<!--        android:id="@+id/frame_layout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" >-->
+
+<!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--            android:id="@+id/bottom_nav"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:backgroundTint="@color/dark_blue"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:menu="@menu/bottom_navigation_menu">-->
+
+<!--            &lt;!&ndash;        cari cara buat icon lebih besar n bewarna&ndash;&gt;-->
+
+<!--        </com.google.android.material.bottomnavigation.BottomNavigationView>-->
+<!--    </FrameLayout>-->
+
     <FrameLayout
-        android:id="@+id/frame_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:id="@id/frame_layout"
+        android:layout_above="@id/bottom_nav"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_nav"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_navigation_menu"
-        app:backgroundTint="@color/dark_blue">
+        android:id="@id/bottom_nav"
+        android:layout_alignParentBottom="true"
+        app:menu = "@menu/bottom_navigation_menu" />
 
-        <!--        cari cara buat icon lebih besar n bewarna-->
-
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </RelativeLayout>
