Revert "Merge branch 'main' into android-development"
This reverts commit 2ce98c4602f422b8558d4d7a89911c0f88a606aa, reversing
changes made to b5fc8c88a639d92846f6a681fce64290f5a32790.

--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_login.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp">
 
     <ImageView
@@ -24,53 +23,30 @@
         android:textStyle="bold"
         android:layout_centerHorizontal="true"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/usernameTextInputLayout"
+    <EditText
+        android:id="@+id/editTextUsername"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:layout_below="@+id/welcomeGreet"
         android:layout_marginTop="20dp"
-        app:boxCornerRadiusTopEnd="20dp"
-        app:boxCornerRadiusTopStart="20dp"
-        app:boxCornerRadiusBottomStart="20dp"
-        app:boxCornerRadiusBottomEnd="20dp"
-        android:layout_below="@+id/welcomeGreet">
+        android:hint="@string/username" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextUsername"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/username" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordTextInputLayout"
+    <EditText
+        android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/usernameTextInputLayout"
-        android:layout_marginTop="10dp"
-        app:boxCornerRadiusTopEnd="20dp"
-        app:boxCornerRadiusTopStart="20dp"
-        app:boxCornerRadiusBottomStart="20dp"
-        app:boxCornerRadiusBottomEnd="20dp"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleDrawable="@drawable/show_pass">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/passwordEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/password"
-            android:inputType="textPassword"/>
-    </com.google.android.material.textfield.TextInputLayout>
+        android:layout_height="50dp"
+        android:layout_below="@+id/editTextUsername"
+        android:layout_marginTop="20dp"
+        android:hint="@string/password"
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="150dp"
         android:layout_centerHorizontal="true"
-        android:layout_height="50dp"
-        android:layout_below="@+id/passwordTextInputLayout"
-        android:layout_marginTop="40dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editTextPassword"
+        android:layout_marginTop="50dp"
         android:backgroundTint="@color/dark_blue"
         android:text="@string/login" />
 
@@ -80,10 +56,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/btnLogin"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="16dp"
         android:text="@string/signup_ad"
         android:textColor="@color/blue"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        android:onClick="navigateToRegister"/>
+        android:textStyle="bold"/>
 </RelativeLayout>
