--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_welcome.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_welcome.xml
@@ -11,6 +11,6 @@
         android:layout_marginTop="1dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/fitforma_logo_2" />
+        android:src="@drawable/fitforma_logo" />
 
 </RelativeLayout>
