--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_register.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_register.xml
@@ -143,133 +143,18 @@
         android:textStyle="bold"
         android:layout_centerHorizontal="true" />
 
-    <EditText
-        android:id="@+id/InputUsername"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="50dp"
-        android:background="@drawable/input_round"
-        android:ems="10"
-        android:hint="@string/username"
-        android:inputType="text"
-        android:paddingStart="20dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.035"
-        android:autofillHints="" />
-
-    <EditText
-        android:id="@+id/InputName"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/input_round"
-        android:ems="10"
-        android:hint="@string/name"
-        android:inputType="text"
-        android:paddingStart="20dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/InputUsername"
-        app:layout_constraintStart_toStartOf="@+id/InputUsername"
-        app:layout_constraintTop_toBottomOf="@+id/InputUsername"
-        android:autofillHints="" />
-
-    <EditText
-        android:id="@+id/InputEmail"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/input_round"
-        android:ems="10"
-        android:hint="@string/email"
-        android:inputType="text"
-        android:paddingStart="20dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/InputName"
-        app:layout_constraintStart_toStartOf="@+id/InputName"
-        app:layout_constraintTop_toBottomOf="@+id/InputName"
-        android:autofillHints="" />
-
-    <EditText
-        android:id="@+id/InputCountry"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/input_round"
-        android:ems="10"
-        android:hint="@string/country"
-        android:inputType="text"
-        android:paddingStart="20dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/InputEmail"
-        app:layout_constraintStart_toStartOf="@+id/InputEmail"
-        app:layout_constraintTop_toBottomOf="@+id/InputEmail"
-        android:autofillHints="" />
-
-    <EditText
-        android:id="@+id/InputPassword"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/input_round"
-        android:ems="10"
-        android:hint="@string/password"
-        android:inputType="text"
-        android:paddingStart="20dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/InputCountry"
-        app:layout_constraintStart_toStartOf="@+id/InputCountry"
-        app:layout_constraintTop_toBottomOf="@+id/InputCountry"
-        android:autofillHints=""
-        tools:ignore="TextFields" />
-
-    <EditText
-        android:id="@+id/InputConfrimPassword"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/input_round"
-        android:ems="10"
-        android:hint="@string/confirm_password"
-        android:inputType="text"
-        android:paddingStart="20dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/InputPassword"
-        app:layout_constraintStart_toStartOf="@+id/InputPassword"
-        app:layout_constraintTop_toBottomOf="@+id/InputPassword"
-        android:autofillHints=""
-        tools:ignore="TextFields" />
-
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_below="@+id/btnLogin"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="25dp"
         android:text="@string/already_have_an_account_login_here"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/InputConfrimPassword"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/InputConfrimPassword"
-        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
-        tools:ignore="UnknownId" />
+        android:textAlignment="center" />
+
+
 
 
 </RelativeLayout>
