--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_login.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         android:layout_centerHorizontal="true"/>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/usernameTextInputLayout"
+        android:id="@+id/emailTextInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -36,10 +36,10 @@
         android:layout_below="@+id/welcomeGreet">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextUsername"
+            android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/username" />
+            android:hint="@string/email" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -47,7 +47,7 @@
         android:id="@+id/passwordTextInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/usernameTextInputLayout"
+        android:layout_below="@+id/emailTextInputLayout"
         android:layout_marginTop="10dp"
         app:boxCornerRadiusTopEnd="20dp"
         app:boxCornerRadiusTopStart="20dp"
@@ -84,6 +84,5 @@
         android:text="@string/signup_ad"
         android:textColor="@color/blue"
         android:textSize="12sp"
-        android:textStyle="bold"
-        android:onClick="navigateToRegister"/>
+        android:textStyle="bold"/>
 </RelativeLayout>
