--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_welcome.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_welcome.xml
@@ -8,8 +8,7 @@
         android:id="@+id/logo"
         android:layout_width="299dp"
         android:layout_height="285dp"
-        android:layout_marginTop="1dp"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="18dp"
         android:layout_centerVertical="true"
         android:src="@drawable/fitforma_logo_2" />
 
