--- a/Android/FitForma/FitForma/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,17 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_home"
-        android:title="@string/home"
+        android:title=""
         android:icon="@drawable/ic_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:title="@string/search"
+        android:id="@+id/navigation_search"
+        android:title=""
         android:icon="@drawable/ic_search" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:title="@string/Profile"
-        android:icon="@drawable/ic_person"/>
-
+        android:id="@+id/navigation_account"
+        android:title=""
+        android:icon="@drawable/ic_person" />
 </menu>
