--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_login.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
         android:layout_below="@+id/welcomeGreet">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextEmail"
+            android:id="@+id/emailEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email" />
@@ -54,10 +54,10 @@
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusBottomEnd="20dp"
         app:passwordToggleEnabled="true"
-        app:passwordToggleDrawable="@drawable/show_pass">
+        app:passwordToggleDrawable="@drawable/visibility">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/passwordEditText"
+            android:id="@+id/passwordEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
