Revert "Merge branch 'main' of https://github.com/bethatupa/CH2-PS279_FitForma"
This reverts commit 143d8441af20b52bfd7ffda13eb12ce4f530d3ac, reversing
changes made to 51364f16f5436f7bf4a71cc35fbf630111acc3d7.

--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_login.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
         android:layout_below="@+id/welcomeGreet">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/emailEdt"
+            android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email" />
@@ -54,10 +54,10 @@
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusBottomEnd="20dp"
         app:passwordToggleEnabled="true"
-        app:passwordToggleDrawable="@drawable/visibility">
+        app:passwordToggleDrawable="@drawable/show_pass">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/passwordEdt"
+            android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
