--- a/Android/FitForma/FitForma/app/src/main/res/layout/fragment_account.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/fragment_account.xml
@@ -36,17 +36,15 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="4dp"/>
 
-    //nambahin penampil data-data user
-
-<!--    <Button-->
-<!--        android:id="@+id/editProfileButton"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="@string/editProfile"-->
-<!--        android:backgroundTint="@color/blue"-->
-<!--        android:layout_below="@id/emailTextView"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_marginTop="16dp"/>-->
+    <Button
+        android:id="@+id/editProfileButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/editProfile"
+        android:backgroundTint="@color/blue"
+        android:layout_below="@id/emailTextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
 
     <Button
         android:id="@+id/logoutBtn"
@@ -54,7 +52,7 @@
         android:layout_height="wrap_content"
         android:text="@string/logout"
         android:backgroundTint="@color/red"
-        android:layout_below="@id/emailTextView"
+        android:layout_below="@id/editProfileButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"/>
 
