--- a/Android/FitForma/FitForma/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -8,8 +8,7 @@
     <item
         android:id="@+id/navigation_search"
         android:title=""
-        android:iconTint="@color/blue"
-        android:icon="@drawable/ic_camera" />
+        android:icon="@drawable/ic_search" />
 
     <item
         android:id="@+id/navigation_account"
