--- a/Android/FitForma/FitForma/app/src/main/res/drawable/rectangle.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/drawable/rectangle.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/orange" /> <!-- Set the desired color -->
-    <corners android:radius="0dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <solid
+        android:color="@color/dark_blue"/>
+    <corners
+        android:radius="100dp"/>
 </shape>
