--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_main.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,15 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="0dp"
+        android:layout_margin="30dp"
         android:elevation="2dp"
         app:itemIconSize="30dp"
-        app:itemIconTint="@color/blue"
         app:itemRippleColor="@android:color/transparent"
-        app:menu="@menu/bottom_navigation_menu" />
+        app:labelVisibilityMode="unlabeled"
+        android:background="@drawable/rectangle"
+        app:menu="@menu/bottom_navigation_menu"
+        app:itemIconTint="@drawable/bottom_nav_selector"/>
 
 </RelativeLayout>
