--- a/Android/FitForma/FitForma/app/src/main/res/values/themes.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/values/themes.xml
@@ -1,8 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.FitForma" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+<!--        primary brand color-->
+        <item name="colorPrimary">@color/dark_blue</item>
+        <item name="colorPrimaryVariant">@color/blue</item>
+        <item name="colorOnPrimary">@color/white</item>
+<!--        secondary brand color-->
+        <item name="colorSecondary">@color/orange</item>
+        <item name="colorSecondaryVariant">@color/red</item>
+        <item name="colorOnSecondary">@color/white</item>
     </style>
 
     <style name="Theme.FitForma" parent="Base.Theme.FitForma" />
